@@ -2,4 +2,10 @@
 <strings>
 	<string id="30001">Søg i Bonanza</string>
 	<string id="30002">Redaktionens favoritter</string>
+    <string id="30003">%d klip set på Bonanza</string>
+    <string id="30004">Senest tilføjet på Bonanza</string>
+
+    <string id="30900">Der er sket en fejl i kommunikationen med Bonanza.</string>
+    <string id="30901">Prøv igen senere. Fejlen er:</string>
+
 </strings>
