@@ -2,4 +2,9 @@
 <strings>
 	<string id="30001">Search Bonanza</string>
 	<string id="30002">Editors favourites</string>
+	<string id="30003">%d videos seen on Bonanza</string>
+    <string id="30004">Recently added on Bonanza</string>
+
+    <string id="30900">There was an error while communication with Bonanza.</string>
+    <string id="30901">Please try again later. Error message is:</string>
 </strings>
